--- a/src/App.css
+++ b/src/App.css
@@ -1,16 +1,18 @@
 .App {
   text-align: center;
+  display: grid;
+  justify-content: center;
+  width: 100%;
+
+}
+.App2{
+ justify-content: center;
+ text-align: center;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+input:checked {
+  background-color: #2c83ea;
 }
 
 .App-header {
@@ -24,15 +26,5 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
